--- a/week2/todoList/todo.html
+++ b/week2/todoList/todo.html
@@ -15,8 +15,8 @@
     </header>
     <nav>
         <button class="btn-today">오늘만 보기</button>
-        <button>내일만 보기</button>
-        <button>함께 보기</button>
+        <button class="btn-tomorrow">내일만 보기</button>
+        <button class="btn-all">함께 보기</button>
     </nav>
     <main>
         <section class="left">
