feat: velog 태그 추가 삭제 기능

--- a/week2/velog/velog.html
+++ b/week2/velog/velog.html
@@ -20,7 +20,7 @@
                 search
                 </span>
             </button>
-            <button class="header-group__btn-new-post">새 글 작성</button>
+            <a href="velogTag.html" class="header-group__btn-new-post">새 글 작성</a>
             <button class="header-group__btn-profile"><img src="./asset/안녕.png" alt="폼푸" class="profile__img-profile"></button>
             <button class="header-group__btn-info"><span class="material-symbols-outlined">
                 expand_more
