--- a/week2/velog/velog.html
+++ b/week2/velog/velog.html
@@ -13,14 +13,14 @@
 </head>
 <body>
     <header>
-        <h2 class="velog-logo">Velog</h2>
+        <h2 class="velog-logo">velog</h2>
         <section class="header-group">
             <button class="header-group__btn-search">
                 <span class="material-symbols-outlined">
                 search
                 </span>
             </button>
-            <a href="velogTag.html" class="header-group__btn-new-post">새 글 작성</a>
+            <a href="velogTag.html"><button class="header-group__btn-new-post">새 글 작성</button></a>
             <button class="header-group__btn-profile"><img src="./asset/안녕.png" alt="폼푸" class="profile__img-profile"></button>
             <button class="header-group__btn-info"><span class="material-symbols-outlined">
                 expand_more
