--- a/week2/velog/velog.html
+++ b/week2/velog/velog.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
+    <section class="close-modal">
+
+    </section>
     <header>
         <h2 class="velog-logo">velog</h2>
         <section class="header-group">
